src/unit_tests/Semantics/success/variable-without-right-assign.cl
class Main {
    a : Int;
	main() : Int {
		1
	};
};