src/unit_tests/Semantics/fail/variable-in-parent-class.cl
class A {
    x : Int;
};

class B inherits A {
    x : Int;
};

class Main {
	main() : Int {
		1
	};
};